src/style/main.less
/* TODO drop much of this */
@import "../js/base/style/main-base.less";
// @import "oldcruft.less"; // can we just drop this?
@import "../js/base/style/good-loop.less";

body {
	background: #FBFAFA;
}
h3 {
	color: @gl-red;
}
/** The gl logo */
.header-image {
	width:95px;
}

#nav {
	.btn-link {
		color:black;
		border: 1px solid black;
		border-radius: 0;
		margin: 1vmin;
		position: absolute;
		top: 0;
		right: 0;
	}
} /* ./ #nav */

/* use a header font */
select#control-format {
	font-family: "Bebas Neue", bebas, helvetica, sans-serif;
	font-weight: 500;
	font-size: 1.5rem;
}

#outer {
	background-image: url("/img/black-iphone.png");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100% 766px;
	height: 780px;
	max-width: 362px;
	text-align: center;

	iframe {
		overflow: hidden;
		position: relative;
		width: 90%;
		height: 604px;
		top: 76px;
	}
}

// MPU2 and click-to-expand use fixed sizing. Cannot display in containers below this sort of size
#outer.fixed-width {
	width: 362px;

	iframe {
		width: 320px;
	}
}

/* 
	Phone image in landscape mode
	Height will be set by javascript. Need to maintain 16:9 + some ratio
*/
#outer.rotated {
	background-image: url("/img/black-iphone-rotated.png");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100% 100%;
	height: auto;
	width: 100%;
	margin: 0;
	padding-top: 3%;
	padding-bottom: 3%;

	// This was causing horizontal scrolling on smaller screens
	min-width: unset;

	iframe {
		padding: 0 12%;
		width: 100%;
		height: auto;
		top: unset;
	}
}

.flex-vertical-align {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* iphone shows some sizing issues that weren't showing up in Chrome iphone emulation or the bigger screen on my Android. ^Roscoe Jan 2019 */
@media (max-width: 361px) {
	#outer {
		// height: 215.4vw; Let the full surround show
		margin: auto -15px; /* break out of the container padding */
	}
}

